Sistemato il thread di ascolto che non startato, aggiunta richiesta source ip, aggiunti i controlli delle caselle di testo, rimpiazzata label con listbox.

--- a/ChatSocket/ChatSocket/ChatSocket.csproj
+++ b/ChatSocket/ChatSocket/ChatSocket.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="MainWindow.xaml~RF22a5fe.TMP" />
+  </ItemGroup>
+
 </Project>
